src/objects/MCOP_Batch__c.object
<CustomObject>
    <description>Staging table to store the conversion mapping &amp; paramters  which will be used in the Batch Processing</description>
    <fields>
        <fullName>Account_Type__c</fullName>
        <description>Targeted Account Types</description>
        <label>Subscriber Account Type</label>
        <picklist>
            <picklistValues>
                <fullName>Direct Individual</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Direct Corporate</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Direct SPH Inter-Division</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Actual_Job_Start_Time__c</fullName>
        <description>Actual Batch Job Start Running Time</description>
        <label>Actual Job Start Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Contract_End_Date_From__c</fullName>
        <description>Contract End Date Range - From</description>
        <label>Contract End Date From</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Contract_End_Date_To__c</fullName>
        <description>Contract End Date Range - To</description>
        <label>Contract End Date To</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Converted_Sub_Count__c</fullName>
        <description># of Subscriptions successfully converted</description>
        <label># of Successful Converted</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Effective_Date__c</fullName>
        <description>Conversion Effective Date</description>
        <label>Conversion Effective Date</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>From_Package__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <description>Package for conversion: Source Package Convert From</description>
        <label>From Package</label>
        <referenceTo>Package__c</referenceTo>
        <relationshipLabel>Mass Change of Package Batch (From Package)</relationshipLabel>
        <relationshipName>MCOP_Config_From_Pack</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Job_End_Time__c</fullName>
        <description>Batch Job Completion Time</description>
        <label>Job End Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Job_ID__c</fullName>
        <description>The Batch Job ID</description>
        <label>Apex Job ID</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Job_Status__c</fullName>
        <description>Batch Job Status</description>
        <label>Job Status</label>
        <picklist>
            <picklistValues>
                <fullName>Not Started</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Running</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Completed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Failed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cancelled</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>On_Contract__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Whether the subscription is on contract or not</description>
        <label>Is On Contract?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Payment_Mode__c</fullName>
        <description>Targeted Payment Modes</description>
        <label>Payment Mode</label>
        <picklist>
            <picklistValues>
                <fullName>Credit Card</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PayPal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Invoice</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Remark__c</fullName>
        <description>Job Result Remark</description>
        <label>Remark</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Start_Time__c</fullName>
        <description>Preferred Job Start Time</description>
        <label>Preferred Job Start Time</label>
        <required>true</required>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Sub_Qty_From__c</fullName>
        <description>Subscription Quantity Range - From</description>
        <label>Subscription Quantity From</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Sub_Qty_To__c</fullName>
        <description>Subscription Quantity Range - To</description>
        <label>Subscription Quantity To</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Target_Sub_Count__c</fullName>
        <description># of Subscriptions meet the conversion criteria</description>
        <label># of Eligible Subscriptions</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>To_Package__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <description>Package for conversion: Target Package to convert to</description>
        <label>To Package</label>
        <referenceTo>Package__c</referenceTo>
        <relationshipLabel>Mass Change of Package Batch (To Package)</relationshipLabel>
        <relationshipName>MCOP_Config_To_Pack</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <label>Mass Change of Package Batch</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>On_Contract__c</columns>
        <columns>Account_Type__c</columns>
        <columns>From_Package__c</columns>
        <columns>To_Package__c</columns>
        <columns>Sub_Qty_From__c</columns>
        <columns>Sub_Qty_To__c</columns>
        <columns>Job_Status__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>MCOP-{000000}</displayFormat>
        <label>Record Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Mass Change of Package Batch</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>ContEDateFrom_and_ConEDateTo_Mandatory</fullName>
        <active>true</active>
        <description>“Contract End Date From”  and “Contract End Date To” can only have value if “Is On Contract?” is checked</description>
        <errorConditionFormula>AND( On_Contract__c = FAlSE,  OR(NOT(ISNULL(Contract_End_Date_From__c)), NOT(ISNULL(Contract_End_Date_To__c))))
||
AND( On_Contract__c = TRUE,  NOT(ISNULL(Contract_End_Date_From__c)) != NOT(ISNULL(Contract_End_Date_To__c)))</errorConditionFormula>
        <errorDisplayField>On_Contract__c</errorDisplayField>
        <errorMessage>Invalid Contract End Date Range</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>ContEndDateTo_cnotbefore_ContEndDateFrom</fullName>
        <active>true</active>
        <description>“Contract End Date To” cannot before “Contract End Date From”</description>
        <errorConditionFormula>Contract_End_Date_From__c &gt; Contract_End_Date_To__c</errorConditionFormula>
        <errorDisplayField>Contract_End_Date_To__c</errorDisplayField>
        <errorMessage>Contract End Date To cannot before Contract End Date From</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>ConvEffeDate_greater_PrefrJobStartTime1</fullName>
        <active>true</active>
        <description>“Conversion Effective Date” shall be greater than “Preferred Job Start Time” + 1</description>
        <errorConditionFormula>NOT(Effective_Date__c  &gt;  DATEVALUE( Start_Time__c +1))</errorConditionFormula>
        <errorDisplayField>Effective_Date__c</errorDisplayField>
        <errorMessage>Conversion Effective Date should be greater than Preferred Job Start Time + 1 Day</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>ConversinEffDate_after_ContractEndDateTo</fullName>
        <active>true</active>
        <description>“Conversion Effective Date” shall be after the “Contract End Date To”</description>
        <errorConditionFormula>NOT( Effective_Date__c &gt;  Contract_End_Date_To__c )</errorConditionFormula>
        <errorDisplayField>Effective_Date__c</errorDisplayField>
        <errorMessage>Conversion Effective Date should be after the Contract End Date To</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>From_and_To_Package_Same_BillingType</fullName>
        <active>true</active>
        <description>“From Package” and “To Package” should be Same BillingType</description>
        <errorConditionFormula>NOT( TEXT(From_Package__r.Billing_Type__c) = TEXT(To_Package__r.Billing_Type__c) )</errorConditionFormula>
        <errorDisplayField>From_Package__c</errorDisplayField>
        <errorMessage>From Package and To Package should be Same BillingType</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>From_and_To_Package_cannot_Bundle_AddOn</fullName>
        <active>true</active>
        <description>“From Package” and “To Package” cannot be a Bundle or Add-on Package</description>
        <errorConditionFormula>OR(  ISPICKVAL(From_Package__r.Package_Type__c, &apos;Bundle&apos;)  ,ISPICKVAL(From_Package__r.Package_Type__c, &apos;Add On&apos;) ,ISPICKVAL(To_Package__r.Package_Type__c, &apos;Bundle&apos;)  ,ISPICKVAL(To_Package__r.Package_Type__c, &apos;Add On&apos;))</errorConditionFormula>
        <errorDisplayField>From_Package__c</errorDisplayField>
        <errorMessage>From Package and To Package cannot be a Bundle or Add-on Package</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>From_and_To_Package_cannot_Full_Prepaid</fullName>
        <active>true</active>
        <description>“From Package” and “To Package” cannot be a Full Prepaid Package</description>
        <errorConditionFormula>AND(  ISPICKVAL(From_Package__r.Billing_Type__c, &apos;Full Prepaid&apos;) , ISPICKVAL(To_Package__r.Billing_Type__c , &apos;Full Prepaid&apos;) )</errorConditionFormula>
        <errorDisplayField>From_Package__c</errorDisplayField>
        <errorMessage>From Package and To Package cannot be a Full Prepaid Package</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>PreferredJobStartTime_greaterthan_NOW</fullName>
        <active>true</active>
        <description>“Preferred Job Start Time” shall be greater than NOW</description>
        <errorConditionFormula>Start_Time__c  &lt;  NOW()</errorConditionFormula>
        <errorDisplayField>Start_Time__c</errorDisplayField>
        <errorMessage>Preferred Job Start Time should be greater than NOW</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>SubQtyTo_value_cannot_lesthan_SubQtyFrom</fullName>
        <active>true</active>
        <description>“Subscription Quantity To” value cannot be less than “Subscription Quantity From”</description>
        <errorConditionFormula>Sub_Qty_From__c &gt; Sub_Qty_To__c</errorConditionFormula>
        <errorDisplayField>Sub_Qty_To__c</errorDisplayField>
        <errorMessage>Subscription Quantity To value cannot be less than Subscription Quantity From</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Subscription_Qty_From_value_greatertha_0</fullName>
        <active>true</active>
        <description>“Subscription Quantity From” value shall be greater than 0</description>
        <errorConditionFormula>Sub_Qty_From__c  &lt;   1</errorConditionFormula>
        <errorDisplayField>Sub_Qty_From__c</errorDisplayField>
        <errorMessage>Subscription Quantity From value should be greater than 0</errorMessage>
    </validationRules>
</CustomObject>